# window_helper

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.ps1  imgui.ini  package.ps1  vcpkg.json
build-portable/: .last-output-name.txt  cmake_install.cmake  pt-automation.slnx
build-portable/mock/: cmake_install.cmake
build-portable/src/: cmake_install.cmake
docs/: build-deploy-test-guide.md  huong-dan-do-toa-do-thanh-pot.md  input-backend-decision.md  ui-parameters-guide.md
docs/journals/: 2026-06-11-1545-license-activation-phase-1-2.md  2026-06-11-1617-license-phase-3-6.md  2026-06-11-1640-license-system-complete.md
mock/: CMakeLists.txt
mock/src/: main.cpp
plans/260529-1543-pt-external-automation-mvp/: phase-00-postmessage-probe.md  phase-01-capture-and-vision.md  phase-02-input-humanizer-gate.md  phase-03-dispatcher-combat-fsm.md  phase-04-config-ui-calibrate.md  phase-05-logger-tray-naming.md  phase-06-integration-test.md  phase-07-soak-tuning.md  phase-08-build-deploy-test-guide.md  plan.md
plans/260530-2118-anti-detect-tier1/: phase-01-mouse-path.md  phase-02-click-distribution.md  phase-03-anti-static-scan.md  phase-04-postmessage-only.md  phase-05-integration-test.md  plan.md
plans/260531-0857-virtual-desktop-mode/: phase-00-desktop-probe.md  phase-01-printwindow-capture.md  phase-02-desktop-manager-and-worker.md  phase-03-game-launcher.md  phase-04-switch-hotkey-and-ui.md  phase-05-soak-test.md  plan.md
plans/260531-0900-engagement-lock/: phase-01-config-fields.md  phase-02-fsm-engagement-lock.md  phase-03-compile-and-manual-test.md  phase-04-ui-expose.md  plan.md
plans/260531-0951-pot-refill-from-inventory/: phase-01-config-and-state.md  phase-02-gate-and-priority.md  phase-03-pot-refill-scheduler.md  phase-04-combat-pot-skip.md  phase-05-main-wiring-and-ui.md  phase-06-manual-testing.md  plan.md
plans/260531-1753-vision-mob-targeting/: phase-01-stratified-sweep.md  phase-02-target-frame-detector.md  phase-03-vision-state-pipeline.md  phase-04-fsm-vision-engagement.md  phase-05-config-ui-calibration.md  phase-06-phase1-soak-tune.md  phase-07-data-collection-tool.md  phase-08-labeling-training.md  phase-09-onnx-runtime-integration.md  phase-10-mob-detector-module.md  phase-11-mob-aware-sweep.md  phase-12-phase2-soak-tune.md  plan.md
plans/260601-1644-buff-timing-per-slot/: phase-01-config-schema-migration.md  phase-02-fsm-timing-refactor.md  phase-03-ui-and-validation.md  phase-04-buff-safe-spot.md  plan.md
plans/260610-0831-multi-window-auto/: phase-01-window-discovery-and-context.md  phase-02-foreground-arbiter.md  phase-03-input-scheduler-owner.md  phase-04-main-wiring.md  phase-04b-profile-manager.md  phase-05-ui-tabs.md  phase-06-test-soak.md  phase-07-calibration-and-window-pin.md  plan.md
plans/260610-0928-multi-window-coexist-auto/: phase-00-poc-feasibility.md  phase-01-window-lifecycle.md  phase-02-foreground-arbiter.md  phase-03-input-scheduler-pause.md  phase-04-user-activity-pause.md  phase-05-main-wiring.md  phase-06-profile-manager.md  phase-07-ui-dynamic-tabs.md  phase-08-calibration.md  phase-09-test-soak.md  plan.md
plans/260610-1125-true-isolation-injection-auto/: phase-00-poc-input-api-probe.md  phase-01-hook-engine.md  phase-02-manual-map-injector.md  phase-03-input-proxy-dll.md  phase-04-ipc-shared-mem.md  phase-05-xc3-bypass.md  phase-06-host-integration.md  phase-07-ui-reuse.md  plan.md  (+3 more)
src/: CMakeLists.txt  main.cpp
src/capture/: frame.h  i-frame-source.h  wgc-capture.cpp  wgc-capture.h
src/combat/: attack-sweep.h  buff-sequencer.h  combat-activity-monitor.cpp  combat-activity-monitor.h  combat-fsm.cpp  combat-fsm.h  pot-evaluator.cpp  pot-evaluator.h  pot-refill-scheduler.cpp  pot-refill-scheduler.h
src/config/: config-bus.h  config-loader.cpp  config-loader.h
src/core/: capture-health-fsm.cpp  capture-health-fsm.h  humanizer.cpp  humanizer.h  logger.cpp  logger.h  output-gate.cpp  output-gate.h  spsc-frame-slot.h
src/dispatch/: action-dispatcher.cpp  action-dispatcher.h  priority.h
src/input/: i-input-backend.h  input-scheduler.cpp  input-scheduler.h  mouse-path.cpp  mouse-path.h  postmessage-backend.cpp  postmessage-backend.h  send-input-backend.cpp  send-input-backend.h
src/license/: ed25519-verify.cpp  ed25519-verify.h  hwid-collector.cpp  hwid-collector.h  license-cache.cpp  license-cache.h  license-client.cpp  license-client.h  license-manager.cpp  license-manager.h  license-types.h  server-public-key.h
src/resources/: version.rc
src/state/: game-state.h
src/ui/: activation-dialog.cpp  activation-dialog.h  calibration-window.cpp  calibration-window.h  hotkey-manager.h  license-info-dialog.cpp  license-info-dialog.h  main-window.cpp  main-window.h  tray-icon.cpp  tray-icon.h
src/vision/: bar-detector.cpp  bar-detector.h  hue-sampler.cpp  hue-sampler.h  roi.h  vision-pipeline.cpp  vision-pipeline.h  waterline.cpp  waterline.h
(+110 files in other folders)
